--- a/src/js/components/uiElements/widgetElements/sidebar/components/searchTab/components/searchOptions/view/Satellites.html
+++ b/src/js/components/uiElements/widgetElements/sidebar/components/searchTab/components/searchOptions/view/Satellites.html
@@ -82,13 +82,13 @@
         }
     };
 
-    const prepareSatellites = (satellites, restricted) => {
+    const prepareSatellites = (satellites, restricted, forCriteria = false) => {
 
         const {ms = [], pc = []} = satellites;
         const msSatellites = restricted ? ms : ms.filter(x => !x.restricted);
         const pcSatellites = restricted ? pc : pc.filter(x => !x.restricted);
 
-        return [...msSatellites, ...pcSatellites];
+        return !forCriteria ? [...msSatellites, ...pcSatellites] : {ms: msSatellites, pc: pcSatellites};
     };
 
     const getSatelliteSegment = (satellite) => {
@@ -143,6 +143,11 @@
 		},
 
         computed: {
+
+            satellitesForCriteria: ({ _satellites, restricted }) => {
+
+                return prepareSatellites(_satellites, restricted, true);
+            },
 
             preparedSatellites: ({ _satellites, restricted }) => {
 
