--- a/src/css/main.css
+++ b/src/css/main.css
@@ -249,6 +249,12 @@ html, body {
     box-shadow: 0px 1px 7.84px 0.16px rgba(0, 0, 0, 0.16);
     z-index: 400;
 }
+.dialog-permalink {
+    width: 531px;
+}
+.dialog-permalink .permalink-loader {
+    width: 453px;
+}
 .dialog-permalink *,
 .dialog-download .download-footer * {
     display: inline-block;
