Store && client filter

--- a/src/js/components/uiElements/widgetElements/sidebar/components/searchTab/components/searchOptions/view/Satellites.html
+++ b/src/js/components/uiElements/widgetElements/sidebar/components/searchTab/components/searchOptions/view/Satellites.html
@@ -38,8 +38,7 @@
 
     import Info from './Info.js';
     import Translations from 'scanex-translations';
-
-    const PANCHROME_IDS = ['WV01', 'RP_PC', 'SP5_5PC', 'EROSB', 'EROSA'];
+    import {PANCHROME_IDS} from 'js/config/constants/constants';
 
     const satellitesMeta = {
         first: {
