Legend was added to heatmap baselayer && activeLayer was remembered in permalink

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -443,3 +443,17 @@ html, body {
 #auth .dropdownMenuWidget-item a:hover {
     color: #555;
 }
+
+.slider-widget-tick-left, .slider-widget-tick-right {
+    border-radius: 2px !important;
+}
+
+.iconlayers-legend {
+    width: 238px;
+    height: 83px;
+    background-image: url('img/legend.png');
+    position: absolute;
+    bottom:125px;
+    z-index:800;
+    border: 1px solid #a6b6c3;
+}
