--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -65,3 +65,46 @@
     font-weight: 500;
     padding: 0px 30px 0px 30px;
 }
+
+
+.upload-dialog .panel-body {
+    background-color: #eef2f5;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    min-width: 250px;
+    max-width: 350px;
+}
+.upload-dialog .header {
+    font-weight: bold;
+    text-align: center;
+    padding: 5px 10px 5px 10px;
+    font-weight: bold;
+    text-align: center;
+    font-size: 14px;
+}
+.upload-dialog .panel-content {
+    padding: 0px 10px 5px;
+    overflow-y: auto;
+    max-height: 300px;
+}
+.upload-dialog .panel-content .item-header {
+    padding-top: 10px;
+    font-size: 14px;
+}
+.upload-dialog .item-data {
+    padding: 5px 5px;
+    border: 1px solid #a6b6c3;
+    border-radius: 3px;
+    margin-top: 5px;
+    font-size: 14px;
+}
+.upload-dialog .item-container input, .upload-dialog .item-container span {
+    vertical-align: middle;
+}
+.upload-dialog .item-container span:last-child {
+    color: #666666;
+}
+.upload-dialog .panel-footer {
+    text-align: center;
+    padding: 10px;
+}
