Modal close icon was added

--- a/src/js/components/uiElements/iconElements/upload/dialogs/UploadDialog.html
+++ b/src/js/components/uiElements/iconElements/upload/dialogs/UploadDialog.html
@@ -5,7 +5,7 @@
     <div class="panel-content">
         <div class="content">
             <div class="item-header">
-                {fullItem['name']}
+                {firstProp['name']}
             </div>
             <div class="item-data">
                 {#each itemKeys as index}
