--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -19,6 +19,7 @@
     background-color: #eef2f5 !important;
     border-radius: 5px;
     box-shadow: 0 1px 5.6px 1.4px rgba(88,88,88,.52);
+    position: relative;
 }
 
 .dialog-content {
@@ -65,7 +66,19 @@
     font-weight: 500;
     padding: 0px 30px 0px 30px;
 }
-
+.panel-icon-close {
+    padding: 3px;
+    display: block;
+    width: 10px;  
+    height: 10px;        
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url('img/delete.png') !important;
+    cursor:pointer;
+    position: absolute;
+    top: 9px;
+    right: 5px;
+}
 
 .upload-dialog .panel-body {
     background-color: #eef2f5;
