--- a/src/js/components/uiElements/iconElements/upload/dialogs/UploadDialog.html
+++ b/src/js/components/uiElements/iconElements/upload/dialogs/UploadDialog.html
@@ -2,6 +2,7 @@
     <div class="header">
         {drawingProps.length > 0 ? translate('alerts.addToDrawingsHeader') : translate('alerts.wrongDrawings')}
     </div>
+    {#if drawingProps.length > 0}
     <div class="panel-content">
         <div class="content">
             <div class="item-header">
@@ -27,6 +28,7 @@
             </div>
         </div>
     </div>
+    {/if}
     <div class="panel-footer">
         {#if drawingProps.length > 0}
             <button
